Fixed bug #35988 (Unknown persistent list entry type in module shutdown)